version/0.31/_sources/api/solver/_autosummary/settings/root.rst.txt
:orphan:

.. _ref_root:

root
====

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.root
    :show-inheritance:

.. rubric:: Attributes

============================================================   ==================================================================================================================================================================================================================

Attribute                                                                                                                                                                                                                                                                 Summary

============================================================   ==================================================================================================================================================================================================================
:ref:`file <file>`                                                 Import and export several kinds of files. Files that are read include mesh, case, data, profile, Scheme, and journal files. Files that are written include case, data, profile, journal, and transcript files.

:ref:`mesh <mesh>`                                                                                                                                                                                                                                                  'mesh' child.

:ref:`server <server>`                                                                                                                                                                                                                                            'server' child.

:ref:`setup <setup>`                                                                                                                                                                                                                                               'setup' child.

:ref:`solution <solution>`                                                                                                                                                                                                                                      'solution' child.

:ref:`results <results>`                                                                                                                                                                                                                                         'results' child.

:ref:`design <design>`                                                                                                                                                                                                                                            'design' child.

:ref:`parametric_studies <parametric_studies>`                                                                                                                                                                                                        'parametric_studies' child.

:ref:`current_parametric_study <current_parametric_study>`                                                                                                                                                                                      Name of Current Parametric Study.

:ref:`parameters <parameters>`                                                                                                                                                                                                                                'parameters' child.

:ref:`parallel <parallel>`                                                                                                                                                                                                                                      'parallel' child.

:ref:`transient_post_processing <transient_post_processing>`                                                                                                                                                                                     Transient postprocessing object.

============================================================   ==================================================================================================================================================================================================================

